fixed link for info pages with z-index

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -31,6 +31,7 @@ body{
   display: flex;
   flex-direction: row;
   width: 100%;
+  z-index: 10;
 }
 
 .logo{
